# jupyterlab_discord

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  makefile  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml
jupyterlab_discord/: __init__.py  magics.py
schema/: plugin.json
src/: index.ts
src/__tests__/: jupyterlab_discord.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyterlab_discord.spec.ts
